[package]
name = "pfw"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
ctrlc = "3.4.5"
log = "0.4.25"
simplelog = "0.12.2"
tokio = { version = "1.43.0", features = ["signal", "macros", "rt-multi-thread", "net", "sync", "io-std", "io-util", "full"] }
